// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload button component renders inverted upload design button 1`] = `
<div
  isinverted="true"
>
  <glbutton-stub
    data-original-title="Adding a design with the same filename replaces the file in a new version."
    title=""
    variant="success"
  >
    
    Add designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders loading icon 1`] = `
<div>
  <glbutton-stub
    data-original-title="Adding a design with the same filename replaces the file in a new version."
    disabled="true"
    title=""
    variant="success"
  >
    
    Add designs
    
    <glloadingicon-stub
      class="ml-1"
      color="orange"
      inline="true"
      label="Loading"
      size="sm"
    />
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders upload design button 1`] = `
<div>
  <glbutton-stub
    data-original-title="Adding a design with the same filename replaces the file in a new version."
    title=""
    variant="success"
  >
    
    Add designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;
